# splatter

./: splatter.cabal  stack.yaml
app/: Flatter.hs  Flatter.vert  Main.hs  Splitter.frag  Splitter.hs  Splitter.vert
shaders/: geo.frag  geo.vert
src/: Splatter.hs
